--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+  <section id="" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="" data-aos="fade-in">
       <h1>Fajar Setiawan</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
     </div>
