--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <img src="assets/img/profile.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Fajar Setiawan</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/_fajset/?next=%2F" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
@@ -82,7 +81,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Saya Lulusan dari SMK Prestasi Prima dengan jurusan yang saya ambil adalah Rekayasa Perangkat Lunak </p>
         </div>
 
         <div class="row">
@@ -92,8 +91,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Pengembang web adalah seorang programmer yang mengkhususkan diri dalam, atau secara khusus terlibat dalam, pengembangan aplikasi World Wide Web menggunakan client–server model.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -111,8 +109,8 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Selama saya belajar di SMK Prestasi Prima, Saya banyak belajar tentang pembuatan Web, Pembuatan aplikasi Desktop dll,
+              Dan saya juga pernah melaksanakan Praktek Kerja Lapangan selama 3 bulan, Dan saya di detempatkan di IT Support.
             </p>
           </div>
         </div>
@@ -236,7 +234,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Dibawah ini adalah Web yang sudah saya buat dan saya kembangkan</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -290,19 +288,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>JL Raya Centex, GG Epatik 1, RT 001/010, NO 108B</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>fajarsetiawan31122004@gmail.com/p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+62 81387272994</p>
               </div>
             </div>
 
