--- a/inner-page.html
+++ b/inner-page.html
@@ -48,7 +48,7 @@
         <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Fajar Setiawan</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/_fajset/?next=%2F" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/_fajset/?next=%2F" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
 
